[tool.poetry]
name = "hawkeye-hackerone-integration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2019.6.16"
chardet = "3.0.4"
colorama = "0.4.4"
configparser = "4.0.2"
crayons = "0.4.0"
dnspython = "1.16.0"
docker = "4.0.2"
idna = "2.8"
jinja2 = "2.11.2"
markupsafe = "1.1.1"
pycurl = "7.43.0"
pymongo = "3.8.0"
python-crontab = "2.4.2"
python-dateutil = "2.8.1"
python-dotenv = "0.15.0"
requests = "2.22.0"
selenium = "3.141.0"
six = "1.10.0"
urllib3 = "1.25.3"
virtualenv = "15.0.1"
webdriver-manager = "2.4.0"
websocket-client = "0.56.0"
werkzeug = "0.15.4"
bs4 = "^0.0.2"
tinydb = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
